// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton close by clicking outside 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton close by clicking outside 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton close by clicking outside 3`] = `""`;

exports[`DropButton closed 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<button
  aria-label="Open Drop"
  class="c0"
  disabled=""
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton open and close 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton open and close 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton open and close 3`] = `""`;

exports[`DropButton opened 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton opened ref 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton opened ref 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton opened ref 3`] = `""`;

exports[`DropButton ref function 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<button
  aria-label="Open Drop"
  class="c0"
  type="button"
>
  Dropper
</button>
`;

exports[`DropButton ref function 2`] = `
@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  id="drop-contents"
>
  Drop Contents
</div>
`;

exports[`DropButton ref function 3`] = `""`;

exports[`DropButton rendersr a11yTitle and aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c1:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus > circle,
.c1:focus > ellipse,
.c1:focus > line,
.c1:focus > path,
.c1:focus > polygon,
.c1:focus > polyline,
.c1:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus::-moz-focus-inner {
  border: 0;
}

.c1:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) > circle,
.c1:focus:not(:focus-visible) > ellipse,
.c1:focus:not(:focus-visible) > line,
.c1:focus:not(:focus-visible) > path,
.c1:focus:not(:focus-visible) > polygon,
.c1:focus:not(:focus-visible) > polyline,
.c1:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<div
  class="c0"
>
  <button
    aria-label="Test Label"
    class="c1"
    type="button"
  >
    Dropper
  </button>
  <button
    aria-label="Test Label-2"
    class="c1"
    type="button"
  >
    Dropper
  </button>
</div>
`;

exports[`DropButton should have no accessibility violations 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c0:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus > circle,
.c0:focus > ellipse,
.c0:focus > line,
.c0:focus > path,
.c0:focus > polygon,
.c0:focus > polyline,
.c0:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

.c0:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible) > circle,
.c0:focus:not(:focus-visible) > ellipse,
.c0:focus:not(:focus-visible) > line,
.c0:focus:not(:focus-visible) > path,
.c0:focus:not(:focus-visible) > polygon,
.c0:focus:not(:focus-visible) > polyline,
.c0:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c0:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<button
  aria-label="test"
  class="c0"
  type="button"
/>
`;
